@@ -30,11 +30,23 @@ public abstract class SimpleKeyedContainer<I, T> extends AbstractSimpleContainer
      * Constructor.
      *
      * <p>
+     * After using this constructor, subsequent invocations of {@link #setPropertyExtractor setPropertyExtractor()}
+     * and {@link #setProperties setProperties()} are required to define the properties of this container
+     * and how to extract them.
+     */
+    public SimpleKeyedContainer() {
+    }
+
+    /**
+     * Constructor.
+     *
+     * <p>
      * After using this constructor, a subsequent invocation of {@link #setProperties setProperties()} is required
      * to define the properties of this container.
      *
-     * @param propertyExtractor used to extract properties from the underlying Java objects
-     * @throws IllegalArgumentException if {@code propertyExtractor} is null
+     * @param propertyExtractor used to extract properties from the underlying Java objects;
+     *  may be null but then container is not usable until one is configured via
+     * {@link #setPropertyExtractor setPropertyExtractor()}
      */
     public SimpleKeyedContainer(PropertyExtractor<? super T> propertyExtractor) {
         super(propertyExtractor);
@@ -43,9 +55,10 @@ public abstract class SimpleKeyedContainer<I, T> extends AbstractSimpleContainer
     /**
      * Primary constructor.
      *
-     * @param propertyExtractor used to extract properties from the underlying Java objects
-     * @param propertyDefs container property definitions
-     * @throws IllegalArgumentException if either parameter is null
+     * @param propertyExtractor used to extract properties from the underlying Java objects;
+     *  may be null but then container is not usable until one is configured via
+     * {@link #setPropertyExtractor setPropertyExtractor()}
+     * @param propertyDefs container property definitions; null is treated like the empty set
      */
     public SimpleKeyedContainer(PropertyExtractor<? super T> propertyExtractor, Collection<? extends PropertyDef<?>> propertyDefs) {
         super(propertyExtractor, propertyDefs);
